feat: Add Date with corresponding format.

--- a/watchface/src/main/res/values/colors.xml
+++ b/watchface/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="digital_background">#03A9F4</color>
     <color name="digital_text">#ffffff</color>
+    <color name="digital_text_dark">#addffb</color>
 </resources>
